refactor: Domain Driven Design 적용 및 CQRS 패턴 적용 (#76)
* refactor: 회원 JPA 엔티티에서 회원 도메인 모델로 리팩토링

* test: 회원 도메인 모델 단위 테스트 작성

* refactor: 서비스 약관 및 서비스 약관 동의 도메인 설계

* refactor: 스프링 시큐리티에서 MemberService에 대한 의존 제거

* refactor: 인증 도메인 설계

* refactor: 회원 도메인 설계

* refactor: 의뢰자 도메인 설계

* refactor: 피플 도메인 설계

* refactor: 프로젝트 도메인 설계

* rename: PathUtil 삭제

* refactor: 프로젝트 프로필 애그리거트를 루트 애그리거트를 통해서만 접근 가능하도록 수정

* refactor: 피플 도메인에 CQRS 패턴 적용

* refactor: 프로젝트 도메인에 CQRS 패턴 적용

* feat: 프로필 이미지 업로드 시 URI 반환 위치를 Response Header에서 Response Body로 변경

* feat: AttachmentFile과 Portfolio가 URL를 사용하도록 변경

* feat: DTO에서 Hashtag, Portfolio, TechStack VO에 대한 의존성 제거

* test: 변경한 아키텍쳐에 대해 피플 도메인 테스트 수정

* test: 변경한 아키텍쳐에 대해 인증 도메인 테스트 수정

* refactor: 의뢰자 도메인에 CQRS 패턴 적용

* test: 변경한 아키텍쳐에 대해 의뢰자 도메인 테스트 수정

* test: 변경한 아키텍쳐에 대해 프로젝트 도메인 테스트 수정

* refactor: 회원 도메인에 CQRS 패턴 적용 및 테스트 수정

* fix: 서비스 필수 약관 동의 여부 확인 오류 수정

* fix: 피플 정보 수정 시 본인 확인 오류 수정

* fix: 내 의뢰자 정보 등록 시 중복 검증을 하지 않던 오류 수정

* test: 피플 DAO 테스트 작성

* test: 프로젝트 DAO 테스트 작성

* fix: 피플 목록 조회 시 프로젝션 대상이 아닌 칼럼에 대해 정렬을 시도하는 오류 수정

* fix: 토큰 재발급 시 Access Token을 요구하는 오류 수정

* fix: DTO에서 받은 관심 수와 완수한 프로젝트 수를 프로필에서 피플로 이동